@startuml FeatG9_AuthLogout_ClassDiagram
!define RECTANGLE class

skinparam backgroundColor #FEFEFE
skinparam classBackgroundColor #FFFFFF
skinparam classBorderColor #000000
skinparam packageBackgroundColor #E8E8E8
skinparam packageBorderColor #666666
skinparam stereotypeCBackgroundColor #ADD1B2
skinparam arrowColor #333333

title FeatG9_AuthLogout - Class Diagram\n(Domain-Centric Architecture + CQRS Pattern)

' ============================================
' PRESENTATION LAYER
' ============================================
package "PRESENTATION LAYER" #E1D5E7 {
  
  class LogoutEndpoint <<Endpoint>> {
    - _mediator: IMediator
    --
    + Configure(): void
    + HandleAsync(req: LogoutRequestDto, ct: CancellationToken): Task
  }
  
  class LogoutRequestDto <<DTO>> {
    + RefreshToken: string
    + RevokeAllTokens: bool
  }
  
  class LogoutResponseDto <<DTO>> {
    + Success: bool
    + Message: string
    + TokensRevoked: int
  }
  
  LogoutEndpoint --> LogoutRequestDto : uses
  LogoutEndpoint --> LogoutResponseDto : returns
}

' ============================================
' APPLICATION LAYER
' ============================================
package "APPLICATION LAYER" #D5E8D4 {
  
  class LogoutRequest <<Record>> {
    + RefreshToken: string
    + RevokeAllTokens: bool
  }
  
  class LogoutResponse <<Response>> {
    + Success: bool
    + Message: string
    + TokensRevoked: int
  }
  
  class LogoutHandler <<Handler>> {
    - _refreshTokenRepository: IRefreshTokenRepository
    --
    + Handle(request: LogoutRequest, ct): Task<LogoutResponse>
    - LogoutFromCurrentDeviceAsync(refreshToken, ct): Task<LogoutResponse>
    - LogoutFromAllDevicesAsync(refreshToken, ct): Task<LogoutResponse>
  }
  
  interface IRequestHandler {
    + Handle(request, ct): Task<Response>
  }
  
  class LogoutRequestValidator <<Validator>> {
    --
    + LogoutRequestValidator()
  }
  
  LogoutHandler ..|> IRequestHandler : implements
  LogoutHandler --> LogoutRequest : handles
  LogoutHandler --> LogoutResponse : returns
  LogoutRequestValidator --> LogoutRequest : validates
}

' ============================================
' DOMAIN LAYER - Repositories
' ============================================
package "DOMAIN LAYER - Repositories" #FFE6CC {
  
  interface IRefreshTokenRepository <<Interface>> {
    + RevokeTokenAsync(token: string, ct): Task<bool>
    + GetByTokenAsync(token: string, ct): Task<RefreshToken>
    + RevokeAllUserTokensAsync(userId: Guid, ct): Task<bool>
  }
  
  class RefreshToken <<Entity>> {
    + Id: Guid
    + Token: string
    + UserId: Guid
    + ExpiresAt: DateTime
    + RevokedAt: DateTime?
    + IsRevoked: bool
  }
  
  IRefreshTokenRepository --> RefreshToken : manages
}

' ============================================
' DOMAIN LAYER - Entities
' ============================================
package "DOMAIN LAYER - Entities" #F8CECC {
  
  class User <<Entity>> {
    + Id: Guid
    + Email: string
    + FullName: string?
    + PhoneNumber: string?
    + PasswordHash: string?
    + CreatedAt: DateTime
    + UpdatedAt: DateTime
    + RefreshTokens: List<RefreshToken>
  }
  
  User *-- "many" RefreshToken : has
}

' ============================================
' COMMON SERVICES
' ============================================
package "COMMON SERVICES" #E1D5E7 {
  
  interface IMediator <<Interface>> {
    + Send<TResponse>(request, ct): Task<TResponse>
  }
  
  interface IFeatureRequest <<Interface>> {
  }
  
  interface IFeatureResponse <<Interface>> {
  }
  
  LogoutRequest ..|> IFeatureRequest : implements
  LogoutResponse ..|> IFeatureResponse : implements
}

' ============================================
' RELATIONSHIPS
' ============================================

' Endpoint to Mediator
LogoutEndpoint ..> IMediator : uses

' Endpoint to Handler (via MediatR)
LogoutEndpoint ..> LogoutRequest : sends

' Handler to Repository
LogoutHandler ..> IRefreshTokenRepository : uses

' Application layer DTOs
LogoutRequest "request" --> LogoutResponse : produces

' Presentation to Application mapping
LogoutRequestDto ..> LogoutRequest : maps to
LogoutResponseDto ..> LogoutResponse : maps from

' ============================================
' LEGEND
' ============================================
legend bottom left
  | Color | Layer |
  | #E1D5E7 | Presentation Layer & Common Services |
  | #D5E8D4 | Application Layer |
  | #F8CECC | Domain Entities |
  | #FFE6CC | Domain Repositories |
  | | |
  | Line Style | Meaning |
  | --> | Dependency |
  | ..> | Uses/Sends |
  | ..\|> | Implements |
  | *-- | Composition (1 to Many) |
endlegend

@enduml
